[package]
name = "datachannel"
version = "0.11.2"
edition = "2021"
description = "Rust wrappers for libdatachannel."
repository = "https://github.com/lerouxrgd/datachannel-rs"
keywords = ["datachannel", "webrtc", "p2p"]
categories = ["network-programming"]
license = "MPL-2.0"
readme = "README.md"

[dependencies]
datachannel-sys = { path = "datachannel-sys", version = "0.19.4" }
derivative = "2"
log = { version = "0.4", optional = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional = true }
webrtc-sdp = "0.3"

[dev-dependencies]
async-channel = "2"
# async-std = { version = "1", features = ["attributes"] }
# async-tungstenite = { version = "0.24", features = ["async-std-runtime"] }
async-tungstenite = { version = "0.24", features = ["tokio-runtime"] }
crossbeam-channel = "0.5"
env_logger = "0.10"
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }

[features]
default = ["log"]
log = ["dep:log"]
tracing = ["dep:tracing"]
vendored = ["datachannel-sys/vendored"]
media = ["datachannel-sys/media"]
