[package]
name = "datachannel"
version = "0.15.0"
edition = "2021"
description = "Rust wrappers for libdatachannel."
repository = "https://github.com/lerouxrgd/datachannel-rs"
keywords = ["datachannel", "webrtc", "p2p"]
categories = ["network-programming"]
license = "MPL-2.0"
readme = "README.md"

[dependencies]
datachannel-sys = { path = "datachannel-sys", version = "0.22.3" }
derive_more = { version = "2", features = ["debug"] }
log = { version = "0.4", optional = true }
parking_lot = "0.12"
serde = { version = "1", features = ["derive"] }
tracing = { version = "0.1", optional = true }
webrtc-sdp = "0.3"

[dev-dependencies]
async-channel = "2"
async-tungstenite = { version = "0.25", features = ["tokio-runtime"] }
crossbeam-channel = "0.5"
env_logger = "0.11"
futures-util = "0.3"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros", "time"] }
tracing-subscriber = "0.3"
uuid = { version = "1", features = ["serde", "v4"] }

[features]
default = ["log"]
log = ["dep:log"]
tracing = ["dep:tracing"]
vendored = ["datachannel-sys/vendored"]
media = ["datachannel-sys/media"]
