[package]
name = "datachannel-sys"
version = "0.16.7"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2021"
links = "datachannel"
description = "Native bindings to libdatachannel."
repository = "https://github.com/lerouxrgd/datachannel-rs"
categories = ["network-programming"]
license = "LGPL-2.1"

exclude = [
  "libdatachannel/examples",
  "libdatachannel/deps/json",
  "libdatachannel/deps/usrsctp/fuzzer",
]

[dependencies]
openssl = "0.10"

[build-dependencies]
bindgen = "0.59"
cmake = "0.1"
cpp_build = { version = "0.5", optional = true }
openssl-src = { version = "111.16.0", optional = true }

[features]
static = ["openssl/vendored", "openssl-src", "cpp_build"]
media = []
