[package]
name = "datachannel-sys"
version = "0.22.3+0.22.6"
authors = ["Romain Leroux <romain@leroux.dev>"]
edition = "2021"
links = "datachannel"
description = "Native bindings to libdatachannel."
repository = "https://github.com/lerouxrgd/datachannel-rs"
categories = ["network-programming"]
license = "MPL-2.0"

exclude = [
  "libdatachannel/examples",
  "libdatachannel/deps/json",
  "libdatachannel/deps/usrsctp/fuzzer",
]

[build-dependencies]
bindgen = "0.71"
cmake = "0.1"
cpp_build = { version = "0.5", optional = true }
once_cell = { version = "1", optional = true }
openssl-src = { version = "300", optional = true }

[features]
vendored = ["dep:openssl-src", "dep:cpp_build", "dep:once_cell"]
media = []
